--- a/app/views/admin/blog_links/_form.html.erb
+++ b/app/views/admin/blog_links/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @blog_link, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for @admin_blog_link, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :title, :class => 'control-label' %>
     <div class="controls">
@@ -21,24 +21,6 @@
     <%= f.label :url, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :url, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :position, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :position, :class => 'number_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :draft, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.check_box :draft, :class => 'check_box' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :deleted_at, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.datetime_select :deleted_at, :class => 'datetime_select' %>
     </div>
   </div>
 
