--- a/app/views/admin/blog_links/new.html.erb
+++ b/app/views/admin/blog_links/new.html.erb
@@ -1,1 +1,14 @@
+  <% if @admin_blog_link.errors.any? %>
+    <div class="alert alert-error">
+      <button class="close" data-dismiss="alert">×</button>
+      <%= t("activerecord.errors.template.header.other", count: @admin_blog_link.errors.count) %>
+      <ul>
+      <% @admin_blog_link.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+
 <%= render :partial => 'form' %>
