--- a/app/views/admin/blogs/edit.html.erb
+++ b/app/views/admin/blogs/edit.html.erb
@@ -1,6 +1,3 @@
-<%- model_class = @blog.class -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
-                                   :default => "Edit #{model_class.model_name.human}") %></h1>
-</div>
+<%- model_class = @admin_blog.class -%>
+
 <%= render :partial => 'form' %>
