--- a/app/views/admin/versions/_form.html.erb
+++ b/app/views/admin/versions/_form.html.erb
@@ -1,29 +1,26 @@
-<%= form_for(@admin_version) do |f| %>
-  <% if @admin_version.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@admin_version.errors.count, "error") %> prohibited this admin_version from being saved:</h2>
-
-      <ul>
-      <% @admin_version.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @version, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :flag, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :flag, :class => 'check_box' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :deleted_at, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :deleted_at, :class => 'datetime_select' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :flag %><br />
-    <%= f.check_box :flag %>
-  </div>
-  <div class="field">
-    <%= f.label :deleted_at %><br />
-    <%= f.datetime_select :deleted_at %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                admin_versions_path, :class => 'btn' %>
   </div>
 <% end %>
