--- a/app/views/admin/versions/show.html.erb
+++ b/app/views/admin/versions/show.html.erb
@@ -1,20 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = @version.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @admin_version.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @version.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:flag) %>:</strong></dt>
+  <dd><%= @version.flag %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:deleted_at) %>:</strong></dt>
+  <dd><%= @version.deleted_at %></dd>
+</dl>
 
-<p>
-  <b>Flag:</b>
-  <%= @admin_version.flag %>
-</p>
-
-<p>
-  <b>Deleted at:</b>
-  <%= @admin_version.deleted_at %>
-</p>
-
-
-<%= link_to 'Edit', edit_admin_version_path(@admin_version) %> |
-<%= link_to 'Back', admin_versions_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              admin_versions_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_admin_version_path(@version), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              admin_version_path(@version),
+              :method => 'delete',
+              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+              :class => 'btn btn-danger' %>
+</div>
