refs #62 : 変数名を@versionから@admin_versionに変更など

--- a/app/views/admin/versions/index.html.erb
+++ b/app/views/admin/versions/index.html.erb
@@ -14,7 +14,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @versions.each do |version| %>
+    <% @admin_versions.each do |version| %>
       <tr>
         <td><%= link_to version.id, admin_version_path(version) %></td>
         <td><%= version.name %></td>
