--- a/app/views/admin/versions/show.html.erb
+++ b/app/views/admin/versions/show.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = @version.class -%>
+<%- model_class = @admin_version.class -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human %></h1>
 </div>
