--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,7 +19,7 @@
               <li><%= link_to t("menu.admin_blog"), admin_blogs_path %></li>
               <li><%= link_to t("menu.admin_updated_information"), root_path %></li>
               <li><%= link_to t("menu.admin_dashboard"), root_path %></li>
-              <li><%= link_to t("menu.admin_setting"), root_path %></li>
+              <li><%= link_to t("menu.admin_setting"), admin_versions_path %></li>
             </ul> 
           </li>
         <% end %>
@@ -48,7 +48,7 @@
   </div>
 </div>
 
-<% if @admin_menu %>
+<% if @admin_menu_blog %>
   <div class="container">
     <ul class="nav nav-pills">
       <li><%= link_to t("admin_menu.blogs"), admin_blogs_path %></li>
@@ -57,6 +57,13 @@
       <li><%= link_to t("admin_menu.links"), admin_blog_links_path %></li>
       <li><%= link_to t("admin_menu.mail"), admin_blogs_path %></li>
       <li><%= link_to t("admin_menu.access"), admin_blogs_path %></li>
+    </ul>
+  </div>
+<% elsif @admin_menu_setting %>
+  <div class="container">
+    <ul class="nav nav-pills">
+      <li><%= link_to t("admin_menu.versions"), admin_versions_path %></li>
+      <li><%= link_to t("admin_menu.versions"), admin_versions_path %></li>
     </ul>
   </div>
 <% end %>
