--- a/app/views/admin/versions/index.html.erb
+++ b/app/views/admin/versions/index.html.erb
@@ -1,30 +1,33 @@
-<%- model_class = Version.new.class -%>
+<%- model_class = Admin::Version.new.class -%>
+<%= form_for @admin_versions, url: {action: :update}, html: {method: :post} do |f| %>
 <table class="table table-striped">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:flag) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th><%= t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @admin_versions.each do |version| %>
       <tr>
-        <td><%= version.flag %></td>
-        <td><%= version.name %></td>
+        <td><%= f.radio_button :flag, version.id, checked: version.flag %></td>
+        <%= fields_for "versions[]", version do |a| %>
+          <td><%= a.text_field :name %></td>
+        <% end %> 
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_admin_version_path(version), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       admin_version_path(version),
-                      :method => :delete,
-                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                      method: :delete,
+                      confirm: t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
                       :class => 'btn btn-mini btn-danger' %>
         </td>
-      </tr>
-    <% end %>
+      </tr> 
+    <% end %> 
   </tbody>
 </table>
+<%= f.submit class: "btn" %>
+<% end %>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_admin_version_path,
