fixes #70 : 更新内容が不十分であるため隠す

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,9 +1,11 @@
 <%= to_br(t(".introduction")).html_safe %>
 
+<!--
 <table class="table">
   <thead><tr><th><%= t ".updated_informations" %></th></tr></thead>
   <tbody>
-    <%= render partial: @updated_informations %>
-    <tr><td><%= link_to t(".updated_informations_list"), updated_informations_path %></td></tr>
+    <%#= render partial: @updated_informations %>
+    <tr><td><%#= link_to t(".updated_informations_list"), updated_informations_path %></td></tr>
   </tbody>
 </table>
+-->
