refs #54 : メールフォームをサイドメニューに追加

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -51,4 +51,9 @@
     <% end %>
   </ul>
 </div>
+
+<div class="well sidebar-nav">
+  <h4><%= t("sidebar.mail_form") %></h4>
+  <%= render partial: "mail_forms/form" %>
+</div>
 <% end %>
