refs #65 : 管理画面のメール一覧表示

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -55,7 +55,7 @@
       <li><%= link_to t("admin_menu.new_blog"), new_admin_blog_path %></li>
       <li><%= link_to t("admin_menu.comments"), admin_blogs_path %></li>
       <li><%= link_to t("admin_menu.links"), admin_blog_links_path %></li>
-      <li><%= link_to t("admin_menu.mail"), admin_blogs_path %></li>
+      <li><%= link_to t("admin_menu.mails"), admin_mail_forms_path %></li>
       <li><%= link_to t("admin_menu.access"), admin_blogs_path %></li>
     </ul>
   </div>
