--- a/app/views/admin/mail_forms/_form.html.erb
+++ b/app/views/admin/mail_forms/_form.html.erb
@@ -1,17 +1,50 @@
-<%= form_for(@admin_mail_form) do |f| %>
-  <% if @admin_mail_form.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@admin_mail_form.errors.count, "error") %> prohibited this admin_mail_form from being saved:</h2>
-
-      <ul>
-      <% @admin_mail_form.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @mail_form, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :mail, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :mail, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :content, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :content, :class => 'text_area' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :ip, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :ip, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :host, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :host, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :user_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :user_id, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :check, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.check_box :check, :class => 'check_box' %>
+    </div>
+  </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                admin_mail_forms_path, :class => 'btn' %>
   </div>
 <% end %>
