--- a/app/views/admin/mail_forms/edit.html.erb
+++ b/app/views/admin/mail_forms/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing admin_mail_form</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @admin_mail_form %> |
-<%= link_to 'Back', admin_mail_forms_path %>
+<%- model_class = @mail_form.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
+                                   :default => "Edit #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
