--- a/app/views/admin/mail_forms/index.html.erb
+++ b/app/views/admin/mail_forms/index.html.erb
@@ -1,11 +1,7 @@
-<%- model_class = MailForm.new.class -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-</div>
+<%- model_class = Admin::MailForm.new.class -%>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:mail) %></th>
       <th><%= model_class.human_attribute_name(:content) %></th>
@@ -18,7 +14,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @mail_forms.each do |mail_form| %>
+    <% @admin_mail_forms.each do |mail_form| %>
       <tr>
         <td><%= link_to mail_form.id, admin_mail_form_path(mail_form) %></td>
         <td><%= mail_form.name %></td>
@@ -42,7 +38,3 @@
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_admin_mail_form_path,
-            :class => 'btn btn-primary' %>
