refs #73 : メール送信機能の実装

--- a/app/views/mail_forms/_form.html.erb
+++ b/app/views/mail_forms/_form.html.erb
@@ -1,5 +1,10 @@
 <a name="mail_form"></a>
-<p id="notice"><%= notice %></p>
+<% if notice %>
+  <div class="alert alert-success">
+    <button class="close" data-dismiss="alert">×</button>
+    <%= notice %>
+  </div>
+<% end %>
 
 <%= form_for :mail_form, html: {class: "form-vertical"}, url: mail_forms_path do |f| %>
 
