fixes #77 : ブログのコメントを表示

--- a/app/views/blog_comments/_blog_comment.html.erb
+++ b/app/views/blog_comments/_blog_comment.html.erb
@@ -1,3 +1,4 @@
+<div id="blog_comments">
 <% if blog_comment.admin %>
   <tr>
     <td><%= t(".admin") %></td>
@@ -19,3 +20,4 @@
   </tr>
   <tr>
 <% end %>
+</div>
