--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,7 +4,7 @@
     <td colspan="2"><%= to_br(@blog.contents2).html_safe %></td>
   </tr>
   <tr>
-    <td colspan="2" class="text_right">Comments(<%= @blog.count_comments %>)</td>
+    <td colspan="2" class="text_right"><%= link_to "Comments(" + @blog.count_comments.to_s + ")", blog_path(anchor: "blog_comments") %></td>
   </tr>
 </table>
 
