--- a/app/views/blog_comments/_form.html.erb
+++ b/app/views/blog_comments/_form.html.erb
@@ -25,7 +25,7 @@
   <div class="control-group">
     <%= f.label :content, :class => 'control-label' %><%= mark_required(@blog_comment, :content) %>
     <div class="controls">
-      <%= f.text_area :content, :class => 'text_area' %>
+      <%= f.text_area :content, class: "span4", rows: "5" %>
     </div>
   </div>
 <% unless @menu_name == t("menu.blog") %>
