refs #78 テーブル内の線を非表示に変更

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -60,6 +60,10 @@ body {
   background-color: transparent;
 }
 
+.table td {
+    border-top: 0 none;
+}
+
 .table-striped tbody tr:nth-child(2n+1) td, .table-striped tbody tr:nth-child(2n+1) th {
   background-color: #f0fff0;
 }
