--- a/app/views/blog_comments/_form.html.erb
+++ b/app/views/blog_comments/_form.html.erb
@@ -44,7 +44,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= f.submit nil, :class => 'btn btn-primary', confirm: "コメントを投稿します。" %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 blogs_path, :class => 'btn' %>
   </div>
