--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,10 +8,10 @@
   </tr>
 </table>
 
-<%= form_for @blog_comment, html: {class: 'form-horizontal'}, url: confirm_blog_blog_comments_path(blog_id: @blog.id) do |f| %>
+<%= form_for @blog_comment, html: {class: 'form-horizontal'}, url: blog_blog_comments_path(blog_id: @blog.id), remote: true do |f| %>
   <%= render partial: "blog_comments/form", locals: {f: f} %>
 <% end %>
 
-<table class="table">
+<div class="table" id="blog_comments">
   <%= render :partial => @blog_comments, :spacer_template => "blog_comments/separator" %>
-</table>
+</div>
