--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -3,8 +3,9 @@
   <ul class="nav nav-list">
     <li><%= image_tag "kae.jpg" %></li>
     <li><%= t("profile.author") %><%= t("profile.author_text") %></li>
-    <li><%= t("profile.twitter") %><%= link_to t("profile.at") + t("profile.twitter_text"), t("profile.twitter_url") + t("profile.twitter_text") %></li>
-    <li><%= t("profile.favorite") %><%= t("profile.favorite_text") %></li>
+    <li class="inline"><%= t("profile.twitter") %><%= link_to t("profile.at") + t("profile.twitter_text"), t("profile.twitter_url") + t("profile.twitter_text") %></li>
+    <p></p>
+    <li><%= t("profile.introduce") %></li>
   </ul>
 </div>
 
