fixes #83 : ブログタイトルとブログメニューにアイコン追加

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -56,7 +56,11 @@ body {
 .well {
   background-color: #f0fff0;
   .h4 {
-    font-color: #336633;
+    color: #336633;
+  }
+  h4 {
+    margin-bottom: 10px;
+    color: #1A331A;
   }
 }
 
@@ -64,7 +68,7 @@ body {
   background-color: transparent;
 }
 
-.table td {
+.table th, .table td {
     border-top: 0 none;
 }
 
@@ -83,4 +87,8 @@ th.text_right, td.text_right {
 
 label {
   display: inline;
+}
+
+img.icon {
+  margin-right: 7px;
 }
