refs #78 : リンクの背景色を変更

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -45,8 +45,8 @@ body {
   color: #f0fff0;
 }
 
-.nav li a:hover {
-  background: #f0fff0;
+.nav > li > a:hover {
+  background-color: #f0fff0;
 }
 
 .nav li.inline a {
@@ -91,4 +91,8 @@ label {
 
 img.icon {
   margin-right: 7px;
+}
+
+.form-actions {
+  background-color: #f0fff0;
 }
