fixes #81 : レイアウト調整

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -96,3 +96,13 @@ img.icon {
 .form-actions {
   background-color: #f0fff0;
 }
+
+.pagination {
+  .active a {
+    color: #336633;
+    background-color: #f0fff0;
+  }
+  a:hover {
+    background-color: #f0fff0;
+ }
+}
