fixes #90 : ブログ投稿フォームの横幅縦幅を調整

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -93,10 +93,18 @@ img.icon {
   margin-right: 7px;
 }
 
+// フォーム機能：form
+.form-horizontal {
+  select {
+    width: 60px;
+  }
+}
+
 .form-actions {
   background-color: #f0fff0;
 }
 
+// ページング機能：kaminari
 .pagination {
   .active a {
     color: #336633;
