--- a/app/views/admin/blogs/_form.html.erb
+++ b/app/views/admin/blogs/_form.html.erb
@@ -27,13 +27,13 @@
   <div class="control-group">
     <%= f.label :contents1, :class => 'control-label' %><%= mark_required(@admin_blog, :contents1) %>
     <div class="controls">
-      <%= f.text_area :contents1, :class => 'text_area' %>
+      <%= f.text_area :contents1, :class => 'text_area span5', rows: "5" %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :contents2, :class => 'control-label' %><%= mark_required(@admin_blog, :contents2) %>
     <div class="controls">
-      <%= f.text_area :contents2, :class => 'text_area' %>
+      <%= f.text_area :contents2, :class => 'text_area span5', rows: '10' %>
     </div>
   </div>
 
