--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -53,7 +53,7 @@
     <ul class="nav nav-pills">
       <li><%= link_to t("admin_menu.blogs"), admin_blogs_path %></li>
       <li><%= link_to t("admin_menu.new_blog"), new_admin_blog_path %></li>
-      <li><%= link_to t("admin_menu.comments"), admin_blogs_path %></li>
+      <li><%= link_to t("admin_menu.blog_comments"), admin_blog_comments_path %></li>
       <li><%= link_to t("admin_menu.links"), admin_blog_links_path %></li>
       <li><%= link_to t("admin_menu.mails"), admin_mail_forms_path %></li>
       <li><%= link_to t("admin_menu.access"), admin_blogs_path %></li>
