--- a/app/views/admin/blog_comments/_form.html.erb
+++ b/app/views/admin/blog_comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @blog_comment, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for @admin_blog_comment, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :blog_id, :class => 'control-label' %>
     <div class="controls">
