--- a/app/views/admin/blog_comments/show.html.erb
+++ b/app/views/admin/blog_comments/show.html.erb
@@ -1,44 +1,41 @@
-<%- model_class = @blog_comment.class -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
-</div>
+<%- model_class = @admin_blog_comment.class -%>
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:blog_id) %>:</strong></dt>
-  <dd><%= @blog_comment.blog_id %></dd>
+  <dd><%= @admin_blog_comment.blog_id %></dd>
   <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
-  <dd><%= @blog_comment.title %></dd>
+  <dd><%= @admin_blog_comment.title %></dd>
   <dt><strong><%= model_class.human_attribute_name(:author) %>:</strong></dt>
-  <dd><%= @blog_comment.author %></dd>
+  <dd><%= @admin_blog_comment.author %></dd>
   <dt><strong><%= model_class.human_attribute_name(:content) %>:</strong></dt>
-  <dd><%= @blog_comment.content %></dd>
+  <dd><%= @admin_blog_comment.content %></dd>
   <dt><strong><%= model_class.human_attribute_name(:url) %>:</strong></dt>
-  <dd><%= @blog_comment.url %></dd>
+  <dd><%= @admin_blog_comment.url %></dd>
   <dt><strong><%= model_class.human_attribute_name(:mail) %>:</strong></dt>
-  <dd><%= @blog_comment.mail %></dd>
+  <dd><%= @admin_blog_comment.mail %></dd>
   <dt><strong><%= model_class.human_attribute_name(:ip) %>:</strong></dt>
-  <dd><%= @blog_comment.ip %></dd>
+  <dd><%= @admin_blog_comment.ip %></dd>
   <dt><strong><%= model_class.human_attribute_name(:host) %>:</strong></dt>
-  <dd><%= @blog_comment.host %></dd>
+  <dd><%= @admin_blog_comment.host %></dd>
   <dt><strong><%= model_class.human_attribute_name(:password) %>:</strong></dt>
-  <dd><%= @blog_comment.password %></dd>
+  <dd><%= @admin_blog_comment.password %></dd>
   <dt><strong><%= model_class.human_attribute_name(:salt) %>:</strong></dt>
-  <dd><%= @blog_comment.salt %></dd>
+  <dd><%= @admin_blog_comment.salt %></dd>
   <dt><strong><%= model_class.human_attribute_name(:admin) %>:</strong></dt>
-  <dd><%= @blog_comment.admin %></dd>
+  <dd><%= @admin_blog_comment.admin %></dd>
   <dt><strong><%= model_class.human_attribute_name(:mixi) %>:</strong></dt>
-  <dd><%= @blog_comment.mixi %></dd>
+  <dd><%= @admin_blog_comment.mixi %></dd>
   <dt><strong><%= model_class.human_attribute_name(:draft) %>:</strong></dt>
-  <dd><%= @blog_comment.draft %></dd>
+  <dd><%= @admin_blog_comment.draft %></dd>
 </dl>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               admin_blog_comments_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_admin_blog_comment_path(@blog_comment), :class => 'btn' %>
+              edit_admin_blog_comment_path(@admin_blog_comment), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              admin_blog_comment_path(@blog_comment),
+              admin_blog_comment_path(@admin_blog_comment),
               :method => 'delete',
               :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
               :class => 'btn btn-danger' %>
