--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t("menu.admin") %><span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to t("menu.admin_blog"), admin_blogs_path %></li>
+              <li><%= link_to t("menu.admin_blog"), new_admin_blog_path %></li>
               <li><%= link_to t("menu.admin_updated_information"), root_path %></li>
               <li><%= link_to t("menu.admin_dashboard"), root_path %></li>
               <li><%= link_to t("menu.admin_setting"), admin_versions_path %></li>
@@ -51,8 +51,8 @@
 <% if @admin_menu_blog %>
   <div class="container">
     <ul class="nav nav-pills">
-      <li><%= link_to t("admin_menu.blogs"), admin_blogs_path %></li>
       <li><%= link_to t("admin_menu.new_blog"), new_admin_blog_path %></li>
+      <li><%= link_to t("admin_menu.blogs"), admin_blogs_path %></li>
       <li><%= link_to t("admin_menu.blog_comments"), admin_blog_comments_path %></li>
       <li><%= link_to t("admin_menu.links"), admin_blog_links_path %></li>
       <li><%= link_to t("admin_menu.mails"), admin_mail_forms_path %></li>
