--- a/app/views/admin/images/_form.html.erb
+++ b/app/views/admin/images/_form.html.erb
@@ -1,21 +1,14 @@
-<%= form_for(@admin_image) do |f| %>
-  <% if @admin_image.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@admin_image.errors.count, "error") %> prohibited this admin_image from being saved:</h2>
-
-      <ul>
-      <% @admin_image.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @image, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name, :class => 'text_field' %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                admin_images_path, :class => 'btn' %>
   </div>
 <% end %>
