--- a/app/views/admin/images/edit.html.erb
+++ b/app/views/admin/images/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing admin_image</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @admin_image %> |
-<%= link_to 'Back', admin_images_path %>
+<%- model_class = @image.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
+                                   :default => "Edit #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
