--- a/app/views/admin/images/index.html.erb
+++ b/app/views/admin/images/index.html.erb
@@ -1,23 +1,36 @@
-<h1>Listing admin_images</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @admin_images.each do |admin_image| %>
-  <tr>
-    <td><%= admin_image.name %></td>
-    <td><%= link_to 'Show', admin_image %></td>
-    <td><%= link_to 'Edit', edit_admin_image_path(admin_image) %></td>
-    <td><%= link_to 'Destroy', admin_image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<%- model_class = Image.new.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @images.each do |image| %>
+      <tr>
+        <td><%= link_to image.id, admin_image_path(image) %></td>
+        <td><%= image.name %></td>
+        <td><%=l image.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_admin_image_path(image), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      admin_image_path(image),
+                      :method => :delete,
+                      :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Image', new_admin_image_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_admin_image_path,
+            :class => 'btn btn-primary' %>
