--- a/app/views/admin/images/show.html.erb
+++ b/app/views/admin/images/show.html.erb
@@ -1,10 +1,21 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = @image.class -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @admin_image.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @image.name %></dd>
+</dl>
 
-
-<%= link_to 'Edit', edit_admin_image_path(@admin_image) %> |
-<%= link_to 'Back', admin_images_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              admin_images_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_admin_image_path(@image), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              admin_image_path(@image),
+              :method => 'delete',
+              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+              :class => 'btn btn-danger' %>
+</div>
