--- a/app/views/admin/images/index.html.erb
+++ b/app/views/admin/images/index.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = Image.new.class -%>
+<%- model_class = Admin::Image.new.class -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
@@ -12,7 +12,7 @@
     </tr>
   </thead>
   <tbody>
-    <% @images.each do |image| %>
+    <% @admin_images.each do |image| %>
       <tr>
         <td><%= link_to image.id, admin_image_path(image) %></td>
         <td><%= image.name %></td>
