--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,5 +37,6 @@
     </div>
 
     <%= javascript_include_tag "application" %>
+    <script type="text/javascript" src="https://www.dropbox.com/static/api/1/dropbox.js" id="dropboxjs" data-app-key="8ghavk7ijou3u1c"></script>
   </body>
 </html>
