--- a/app/views/admin/blogs/_choose_image.html.erb
+++ b/app/views/admin/blogs/_choose_image.html.erb
@@ -1,1 +1,1 @@
-<input type="dropbox-chooser" name="selected-file" id=<%= id %> />
+<input type="dropbox-chooser" name="selected-file" id=<%= id %> data-link-type='direct' />
