--- a/app/views/blogs/_exordium.html.erb
+++ b/app/views/blogs/_exordium.html.erb
@@ -3,5 +3,5 @@
   <th style="font-weight:normal" class="text_right"><%= l blog.created_at %></th>
 </tr>
 <tr>
-  <td colspan="2"><%= to_br(blog.contents1).html_safe %></td>
+  <td colspan="2"><%= to_img(to_br(blog.contents1)).html_safe %></td>
 </tr>
