--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -34,6 +34,7 @@
         <% if current_user %>
           <li><%= link_to "@" + current_user.screen_name, "https://twitter.com/#{current_user.screen_name}", target: "_blank" %></li>
         <% end %>
+          <li><%= hidden_field_tag "dropbox[uid]", session[:dropbox_user_id] %></li>
           <li class="dropdown" id="menu1">
             <a href="#menu1" class="dropdown-toggle" data-toggle="dropdown">
               <%= t("menu.my_account") %>
